kubernetes-overview/mongoDemo/Internal Service_example.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-internal-service
  labels:
    app: myapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: myapp
