kubernetes-overview/mongoDemo/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
# service can be write on the same with the deployment config file
# To be get started with the service section, we can add --- to start like new document
